[project]
name = "pimpy_simulator"
version = "0.1.0"
requires-python = ">=3.14"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ['py314']

[tool.flake8]
max-line-length = 120
extend-ignore = """
    E203
    E402
"""

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-config=.coveragerc"
